# digestive-functor-playground

./: README.md  digestive-functor-playground.cabal  stack.yaml
src/: Lib.hs
